<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Test_url">

    <Button
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:text="@string/ReturnConfigs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_testURL_test"
        app:layout_constraintTop_toBottomOf="@+id/endPointUrl" />

    <Button
        android:id="@+id/button_testURL_test"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        android:text="@string/TestURL"
        app:layout_constraintEnd_toStartOf="@+id/button_return"
        app:layout_constraintStart_toEndOf="@+id/server_valid"
        app:layout_constraintTop_toBottomOf="@+id/endPointUrl" />

    <EditText
        android:id="@+id/endPointUrl"
        android:layout_width="366dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:background="@color/teal_200"
        android:ems="10"
        android:inputType="textUri|textMultiLine"
        android:text="@string/DefaultUrl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Server_url" />

    <TextView
        android:id="@+id/Server_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/EndpointUrl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/server_valid"
        android:layout_width="161dp"
        android:layout_height="34dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/EndpointValid"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endPointUrl" />

    <TextView
        android:id="@+id/server_response_text"
        android:layout_width="367dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/EndpointResponse"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/server_valid" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="491dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/server_response_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/serverResponse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="none|textMultiLine" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>