<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_startTest"
        android:layout_width="181dp"
        android:layout_height="98dp"
        android:layout_marginBottom="32dp"
        android:text="@string/StartTest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EndPointUrl"
        android:layout_width="366dp"
        android:layout_height="73dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_200"
        android:ems="10"
        android:inputType="textUri|textMultiLine"
        android:text="@string/DefaultUrl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="329dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/EnterUrl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_testURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginTop="12dp"
        android:text="@string/TestURL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EndPointUrl" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="400dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button_startTest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_testURL">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/outputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DefaultUrl" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>